<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    face fragment-->
    <string name="face_capture_cancelled">Face Capture Cancelled</string>
    <string name="face_capture_timedout">Face Capture Timedout</string>
    <string name="out_of_memory">Insufficient Memory</string>
    <string name="free_memory_msg">Try free some memory to save the photo</string>

    <!--Selfie Settings BottomSheet-->
    <string name="userCanceled">Face Capture Cancelled</string>
    <string name="capture_face">capture face</string>
    <string name="front_camera">front camera</string>
    <string name="back_camera">back camera</string>
    <string name="auto_capture">auto capture</string>
    <string name="manual_capture">manual capture</string>
    <string name="iso">iso</string>
    <string name="compress_face_image">compress face image</string>
    <string name="frame_capture">frame capture</string>
    <string name="photo_capture">photo capture</string>
    <string name="iso_full_frontal_crop">iso_full frontal crop</string>
    <string name="timeOut">Capture Timedout</string>
    <string name="failed">Capture Failed</string>
</resources>