<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/face_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:id="@+id/rad_group_camera_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rad_id_front_cam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/front_camera" />

        <RadioButton
            android:id="@+id/rad_id_back_cam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_camera" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rad_group_capture_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad_group_camera_selector">


        <RadioButton
            android:id="@+id/rad_btn_auto_capture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/auto_capture" />

        <RadioButton
            android:id="@+id/rad_btn_manual_capture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manual_capture" />


    </RadioGroup>


    <RadioGroup
        android:id="@+id/rad_group_capture_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">


        <RadioButton
            android:id="@+id/rad_btn_capture_mode_fast"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/frame_capture" />

        <RadioButton
            android:id="@+id/rad_btn_capture_mode_quaity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/photo_capture" />
    </RadioGroup>


</LinearLayout>